# TrevNet

./: .gitignore  CMakeLists.txt
GeneratorFiles/: Edge.xml  Layer.xml  NetwokUtils.xml  Network.xml  NetworkInfo.xml  Node.xml
TrevNetLib/: Arguments.cpp  Arguments.h  CMakeLists.txt  Layer.cpp  Layer.h  Network.cpp  Network.h  NetworkInfo.cpp  NetworkInfo.h  NetworkUtils.cpp  NetworkUtils.h
TrevNetLib/Generator/: NumberGenerator.h  RandomGenerator.h  SeriesGenerator.cpp
TrevNetLib/Generators/: RandomGenerator.cpp  SeriesGenerator.h
TrevNetLib/Model/: Edge.cpp  Node.cpp  Node.h
TrevNetLib/Models/: Edge.h
TrevNetTests/: CMakeLists.txt
TrevNetTests/Tests/: Arguments_Test.cpp  Example_Tests.cpp  Layer_Tests.cpp  NetworkInfo_Tests.cpp  NetworkUtils_Tests.cpp  Network_Tests.cpp  XOR_Test.cpp
